# ReMesh

./: README.md  main.py  pyproject.toml  refined.stl  regions.py  test.stl  test.yaml  transform.py
.github/workflows/: build.yaml  release.yaml
