[project]
name = "remesh"
version = "0.1.0"
description = ""
authors = [
    {name = "Reece Humphreys",email = "reece.humphreys@colorado.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13.3"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "trimesh (>=4.6.6,<5.0.0)",
]

[project.optional-dependencies]
debug = ["matplotlib (>=3.10.1,<4.0.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
